--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </div>
     </section>
 
-    <img src="imgs/dice-5.png" alt="Playing dice" class="dice" />
+    <div class="dice"><i class="fas fa-dice-five"></i></div>
     <button class="btn btn--new"><i class="fas fa-redo-alt"></i> new game</button>
     <button class="btn btn--roll"><i class="fas fa-dice"></i> Roll dice</button>
-    <button class="btn btn--hold">📥 Hold</button>
+    <button class="btn btn--hold">Hold</button>
   </main>
   <script src="script.js"></script>
 </body>
