Add a link to the game rules

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <button class="btn btn--roll"><i class="fas fa-dice"></i> Roll dice</button>
     <button class="btn btn--hold">Hold</button>
   </main>
+  <a href="https://en.wikipedia.org/wiki/Pig_(dice_game)" target="_blank" class="rules-link">Pig Game Rules <i class="fas fa-link"></i></a>
   <script src="script.js"></script>
 </body>
 
